
- #9343: Re-enable `-short-paths` for some error messages
  (Leo White, review by Florian Angeletti)

- #9355, #9356: ocamldebug, fix a fatal error when printing values
  whose type involves a functor application.
  (Florian Angeletti, review by Gabriel Scherer, report by Cyril Six)

- #9367: Make bytecode and native-code backtraces agree.
  (Stephen Dolan, review by Gabriel Scherer)

- #9420: Fix memory leak when `caml_output_value_to_block` raises an exception
  (Xavier Leroy, review by Guillaume Munch-Maccagnoni)

- #9428: Fix truncated exception backtrace for C->OCaml callbacks
  on Power and Z System
  (Xavier Leroy, review by Nicolás Ojeda Bär)


OCaml 4.10 maintenance branch
-----------------------------

### Runtime system:

- #9344, #9368: Disable exception backtraces in bytecode programs
  built with "-output-complete-exe". At the moment, such programs do
  not embed debug information and exception backtraces where causing
  them to crash.
  (Jérémie Dimino, review by Nicolás Ojeda Bär)

OCaml 4.10.0 (21 February 2020)
-------------------------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7757, #1726: multi-indices for extended indexing operators:
  `a.%{0;1;2}` desugars to `( .%{ ;.. } ) a [|0;1;2|]`
  (Florian Angeletti, review by Gabriel Radanne)

* #1859, #9117: enforce safe (immutable) strings by removing
  the -unsafe-string option by default. This can be overridden by
  a configure-time option (available since 4.04 in 2016):
  --disable-force-safe-string since 4.08, -no-force-safe-since
  between 4.07 and 4.04.
  In the force-safe-string mode (now the default), the return type of the
  String_val macro in C stubs is `const char*` instead of
  `char*`. This change may break C FFI code.
  (Kate Deplaix)


- #6662, #8908: allow writing "module _ = E" to ignore module expressions
  (Thomas Refis, review by Gabriel Radanne)

### Runtime system:
