@@ -1,1 +1,2 @@
 type 'a t = T
+module type T = sig type t end
